# dgl-edgepart

./: .gitignore  README.md  pyproject.toml
dgl_edgepart/: convert_edgelist.py  main.py
dgl_edgepart/partition/: node_partitions.py
dgl_edgepart/tools/: edgelist_to_dgl.py
dgl_edgepart/utils/: graph_ops.py  save.py
tests/: test_cli.py  test_convert_edgelist.py  test_dgl_partitioning.py  test_edgelist_to_dgl.py  test_node_partitions.py
tests/resources/: test.txt  test_partitioned.txt
