[tool.poetry]
name = "dgl-edgepart"
version = "0.1.0"
description = ""
authors = ["Daniel Stoll <daniel.stoll@tum.de>"]
readme = "README.md"
packages = [
    { include = "dgl_edgepart" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "^1.12.0"
dgl = [
    {url = "https://data.dgl.ai/wheels/dgl-0.8.2-cp310-cp310-manylinux1_x86_64.whl", platform = "linux"},
    {url = "https://data.dgl.ai/wheels/dgl-0.8.2-cp310-cp310-win_amd64.whl", platform = "win32"}
]
networkx = "^2.8.4"
pyarrow = "^8.0.0"
pandas = "^1.4.3"
scipy = "^1.8.1"
pyspark = "^3.3.0"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
dgl-edgepart = "dgl_edgepart.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"